syntax = "proto3";

package mtfs;

import "dirnode.proto";

option go_package = "velda.io/mtfs/pkg/proto";

enum ClaimStatus {
  CLAIM_STATUS_UNSPECIFIED = 0;             // Unspecified claim status
  CLAIM_STATUS_EXCLUSIVE_WRITE_GRANTED = 1; // Exclusive write access granted
  CLAIM_STATUS_LOCK_READ_GRANTED = 2;       // Read lock granted
  CLAIM_STATUS_EXCLUSIVE_WRITE_REVOKED = 3; // Write lock revoked
  CLAIM_STATUS_LOCK_READ_REVOKED = 4;       // Read lock revoked
}

message OperationRequest {
  bytes cookie = 1; // Cookie for the request
  int64 seq_id = 2; // Sequence ID of the request
  oneof operation {
    // Request to create a directory.
    MkdirRequest mkdir = 3;

    LookupRequest lookup = 4; // Request to look up a file or directory
    GetAttrRequest get_attr = 5;  // Request to get file or directory attributes
  }
}

message OperationResponse {
  // Sequence ID of the request, 0 if it's notification from the server
  int64 seq_id = 1;
  bytes cookie = 2; // Cookie for the identity of the inode.
  oneof response {
    // Response to a directory creation request.
    MkdirResponse mkdir = 3;

    LookupResponse lookup = 4; // Response to a lookup request
    GetAttrResponse get_attr = 5;     // Response to a stat request

    // Belows are notifications from the server.
    ClaimUpdateServerRequest claim_update = 6; // Claim update request
  }
}

message MkdirRequest {
  string name = 1; // Name of the directory to create
  FileStat stat = 2;
}

message MkdirResponse {
  // Identifier of the created directory.
  bytes cookie = 1;
  FileStat stat = 2;
}

message LookupRequest {
  string name = 1; // Name of the file or directory to look up
}

message LookupResponse {
  // Identifier of the looked-up file or directory.
  bytes cookie = 1;
  FileStat stat = 2; // Node information for the looked-up file or directory
  ClaimStatus claim = 3; // Claim status of the looked-up file or directory
}

message GetAttrRequest {
}

message GetAttrResponse {
  FileStat stat = 1; // Statistics of the file or directory
  ClaimStatus claim_update = 2;
}

message ClaimUpdateServerRequest {
  ClaimStatus status = 1; // Status of the claim update
}

service MtfsService {
  // Creates a working connection to the MTFS service.
  rpc Serve(stream OperationRequest) returns (stream OperationResponse) {}
}